--- a/index.html
+++ b/index.html
@@ -4,8 +4,95 @@
   <link href="css/reset.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet" />
 </head>
-<body>
+
+<body id="top">
+
+
+  <div id="home">
+
+  </div>
+  <a href="#top" class="fixed">TOP</a>
+
 
 
   <script src="js/index.js"></script>
 </body>
+
+<section class="navbar">
+
+
+  <header>
+    <div class="navigatie">
+
+
+      <nav>
+        <ul class="menu">
+          <li><a href="#">home</a></li>
+          <li><a href="#about">about</a></li>
+          <li><a href="#contact">contact</a></li>
+
+        </ul>
+
+
+      </nav>
+    </div>
+
+    <div id="home">
+
+
+    </div>
+
+    <div class="image-H">
+      <img src="" alt="">
+
+    </div>
+
+  </header>
+
+</section>
+<section class="aboutpage">
+
+  <main>
+
+    <div id="about" class="about1">
+      <h1>about</h1>
+
+
+    </div>
+
+
+
+
+
+  </main>
+
+
+</section>
+
+<section class="contactpage">
+
+  <div id="contact" class="contact1">
+
+    <h1>contact</h1>
+
+   
+
+  </div>
+ <p class="maps"><iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1755.6042605058992!2d4.371034073882205!3d50.85130514306528!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c36349bd6723%3A0x2d2d504d7f1aa1c!2sRue%20de%20la%20Commune%2025%2C%201210%20Saint-Josse-ten-Noode!5e0!3m2!1sfr!2sbe!4v1642627043820!5m2!1sfr!2sbe"
+        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe></p>
+
+
+
+
+
+
+
+</section>
+
+<footer>
+
+
+
+
+</footer>
