versie-5-camping-josee

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li><a href="#">home</a></li>
             <li><a href="#about">about</a></li>
             <li><a href="#contact">contact</a></li>
-            <li><a href="#">Cantine Josée</a></li>
+            <li><a href="https://www.tennoey.be/cantine-josee" target="_blank">Cantine Josée</a></li>
 
           </ul>
 
@@ -86,7 +86,8 @@
         Nulla provident<br> eveniet,
         distinctio <br> </p>
       <div class="boxmessage2"> </div>
-      <p class="text-about-boxmessage-2">Lorem ipsum <br> dolor sit  amet <br> consectetur <br> adipisicing elit <br>Natus, quia! <br>Lorem ipsum, <br> dolor sit <br> </p>
+      <p class="text-about-boxmessage-2">Lorem ipsum <br> dolor sit amet <br> consectetur <br> adipisicing elit
+        <br>Natus, quia! <br>Lorem ipsum, <br> dolor sit <br> </p>
 
       <!-- <div class="about-text-1">
         <p>Lorem ipsum <br> dolor sit <br> amet consectetur, adipisicing elit. Explicabo maiores nesciunt cum veritatis
@@ -158,6 +159,36 @@
 
 
     <div class="contactbox"></div>
+    <!-- 
+    /// gegevens-start /// -->
+
+
+
+
+
+
+
+    <div class="icones-contact">
+      <img src="../img/email_icon.png" class="icone-email">
+      <img src="../img/address_icon.png" class="icone-adres">
+      <img src="../img/phone_icon_136322.png" class="icone-gsm">
+
+
+    </div>
+    <div class="gegevens-contact">
+      <p class="E-mail">E-mail: <br> (lorem@hotmail.com)</p>
+      <p class="adres">adres: <br> (loremstraat 24 <br>
+        1030 Saint-jose )</p>
+      <p class="gsm">gsm: <br> (0412345688)</p>
+    </div>
+
+
+    <!-- /// gegevens-end /// -->
+
+
+
+
+
     <!-- /// maps-start/// -->
 
 
