versie-6-camping-josee-images

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
       </div>
 
       <div class="brush-img">
-        <img src="../img/home_josee.png" alt="">
+        <img src="./img/home_josee.png" alt="">
 
       </div>
 
       <div class="">
-        <img src="../img/logo_josee.png" class="logo-img">
+        <img src="./img/logo_josee.png" class="logo-img">
 
       </div>
 
@@ -78,8 +78,8 @@
       </div>
 
       <div class="aboutbox"></div>
-      <img src="../img/unknown.png" class="img-about">
-      <img src="../img/about_josee.png" class="img-about-up">
+      <img src="./img/unknown.png" class="img-about">
+      <img src="./img/about_josee.png" class="img-about-up">
       <div class="boxmessage1"></div>
       <p class="titel-about-boxmessage-1">Wie zijn <span>Wij</span>?</p>
       <p class="text-about-boxmessage-1">Lorem ipsum<br> dolor sit amet, <br> consectetur <br> adipisicing elit. <br>
@@ -128,7 +128,7 @@
         </div>
       </div>
     </div>
-    <img src="../img/haha_xd.png" class="evenement">
+    <img src="./img/haha_xd.png" class="evenement">
     <script src="./js/index.js">
     </script>
 
@@ -169,9 +169,9 @@
 
 
     <div class="icones-contact">
-      <img src="../img/email_icon.png" class="icone-email">
-      <img src="../img/address_icon.png" class="icone-adres">
-      <img src="../img/phone_icon_136322.png" class="icone-gsm">
+      <img src="./img/email_icon.png" class="icone-email">
+      <img src="./img/address_icon.png" class="icone-adres">
+      <img src="./img/phone_icon_136322.png" class="icone-gsm">
 
 
     </div>
