versie-7-camping josse

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li><a href="#">home</a></li>
             <li><a href="#about">about</a></li>
             <li><a href="#contact">contact</a></li>
-            <li><a href="https://www.tennoey.be/cantine-josee" target="_blank">Cantine Josée</a></li>
+            <li><a href="https://gpatsis.wixsite.com/cantinejosee?lang=fr" target="_blank">Cantine Josée</a></li>
 
           </ul>
 
@@ -176,10 +176,10 @@
 
     </div>
     <div class="gegevens-contact">
-      <p class="E-mail">E-mail: <br> (lorem@hotmail.com)</p>
-      <p class="adres">adres: <br> (loremstraat 24 <br>
-        1030 Saint-jose )</p>
-      <p class="gsm">gsm: <br> (0412345688)</p>
+      <p class="E-mail">E-mail: <br> lorem@hotmail.com</p>
+      <p class="adres">adres: <br> loremstraat 24 <br>
+        1030 Saint-jose </p>
+      <p class="gsm">gsm: <br> 0412345688</p>
     </div>
 
 
