--- a/index.html
+++ b/index.html
@@ -1,335 +1,125 @@
 <!DOCTYPE html>
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="css/reset.css" rel="stylesheet" />
-  <link href="css/style.css" rel="stylesheet" />
-  <title>
-    Calendar
-  </title>
+  <title>Camping Josée</title>
+
+  <meta charset="utf-8">
+  <meta name="author" content="Mateo Swalens">
+  <meta name="description" content="site waar je huizen kunt bekijken die te koop of te huur staan">
+  <meta name="keywords" content="Makelaarskantoor, De Smet, huizen, appartementen">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/media.css">
+
+  <script src="https://kit.fontawesome.com/ae4c71001f.js" crossorigin="anonymous"></script>
 </head>
 
-<body id="top" class="light">
+<body>
+  <nav>
+
+    <a href="#" onclick="toon();">&#9776;</a>
+    <a href="index.html">
+      <img src="img/logo.png" alt="logo makelaarskantoor">
+    </a>
+
+    <ul class="active" id="entiteit">
+
+      <li>
+        <a href="https://gpatsis.wixsite.com/cantinejosee">Cantine Josée</a>
+        <span></span>
+      </li>
+
+      <li>
+        <a href="/pages/contact.html">Contact</a>
+        <span></span>
+      </li>
+
+      <li>
+        <a href="/pages/over.html">Over ons</a>
+        <span></span>
+      </li>
+
+      <li>
+        <a href="/pages/activiteiten.html">Activiteiten</a>
+        <span></span>
+      </li>
+
+      <li>
+        <a class="active" href="index.html">Home</a>
+        <span class="active"></span>
+      </li>
+
+    </ul>
+  </nav>
+
+  <header>
+    <h1>Camping Josée</h1>
+  </header>
 
 
-  <div id="home">
-
-  </div>
-  <a href="#top" class="fixed">TOP</a>
-
-
-
-  <script src="./js/index.js"> </script>
-
-
-  <section class="homepage">
-
-
-    <header>
-      <div class="navigatie">
-
-
-        <nav>
-          <ul class="menu">
-            <li><a href="#">home</a></li>
-            <li><a href="#about">about</a></li>
-            <li><a href="#contact">contact</a></li>
-            <li><a href="https://gpatsis.wixsite.com/cantinejosee?lang=fr" target="_blank">Cantine Josée</a></li>
-
-          </ul>
+  <main>
+    <article>
+      <section>
+        <h1>12-18 juni 2022 Park van Sint-Joost</h1>
+        <p>Josée heeft het zo naar haar zin in Sint-Joost dat ze nu ook een winterversie van haar camping opent: Cantine
+          Josée, een open ontmoetingsplek waar alles kan en weinig moet, een plek voor open activiteiten, maar ook een
+          hangplek, een plek waar iedereen gewoon mag zijn en zitten, zonder meer.</p>
+      </section>
+      <section>
+        <h1>Wat gebeurt er allemaal?</h1>
+        <p>Kom van maandag tot zondag gewoon langs, om te zitten, zonder meer. Om door de vitrine de gang en wandel van
+          de stad te zien. Om te genieten van het fantastische decor. Om een thee of glas witte wijn te drinken. Er is
+          een hoek met boekjes en spelletjes voor kinderen en er is elke dag soep. Elke openingsdag heeft ook een
+          specifieke insteek.</p>
+      </section>
+    </article>
 
 
-        </nav>
+    <section id="contact">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2519.0128740920222!2d4.369622015459023!3d50.84944586641595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c362d135b4cb%3A0x2035dc236c832cf!2sLeuvensesteenweg%2052%2C%201210%20Sint-Joost-ten-Node!5e0!3m2!1snl!2sbe!4v1643228266415!5m2!1snl!2sbe"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+      <div>
+        <h1>Contact</h1>
+
+        <p>Leuvensesteenweg 54 Chau. de Louvain
+          Saint-Josse-ten-Noode, 1210
+          info@campingjosee.be
+          0473 27 19 47</p>
+
+        <h1>Openingsure</h1>
+        <p>Ma-woe: 8h30-20h00
+          Do-vr: 8h30-23h00
+          Za-zo: 10h00-17h00</p>
       </div>
 
-      <div id="home" class="home1">
-
-
-
-
-
-
-      </div>
-
-      <div class="brush-img">
-        <img src="./img/home_josee.png" alt="">
-
-      </div>
-
-      <div class="">
-        <img src="./img/logo_josee.png" class="logo-img">
-
-      </div>
-
-    </header>
-
-  </section>
-
-
-  <section class="aboutpage">
-
-
-    <main>
-
-      <div id="about" class="about1">
-        <!-- <h1>about</h1> -->
-
-      </div>
-
-      <div class="aboutbox"></div>
-      <img src="./img/unknown.png" class="img-about">
-      <img src="./img/about_josee.png" class="img-about-up">
-      <div class="boxmessage1"></div>
-      <p class="titel-about-boxmessage-1">Wie zijn <span>Wij</span>?</p>
-      <p class="text-about-boxmessage-1">Lorem ipsum<br> dolor sit amet, <br> consectetur <br> adipisicing elit. <br>
-        Nulla provident<br> eveniet,
-        distinctio <br> </p>
-      <div class="boxmessage2"> </div>
-      <p class="text-about-boxmessage-2">Lorem ipsum <br> dolor sit amet <br> consectetur <br> adipisicing elit
-        <br>Natus, quia! <br>Lorem ipsum, <br> dolor sit <br> </p>
-
-      <!-- <div class="about-text-1">
-        <p>Lorem ipsum <br> dolor sit <br> amet consectetur, adipisicing elit. Explicabo maiores nesciunt cum veritatis
-          ad
-          dolores
-          architecto accusantium ea laborum quia similique, rerum distinctio unde sit! Vero voluptates fuga veritatis
-          voluptatibus sequi quisquam molestias? Nam, at! Ab, perferendis. Aut omnis tenetur mollitia quis, id,
-          voluptates similique veniam totam sequi animi hic.</p>
-      </div> -->
-
-
-
-
-
-    </main>
-
-
-  </section>
-
-  <section class="about2">
-    <hr>
-
-    <!-- /// Calendar-start /// -->
-
-    <br><br><br>
-    <div class="calendar">
-      <div class="header">
-        <a data-action="prev-month" href="javascript:void(0)" title="Previous Month"><i></i></a>
-        <div class="text" data-render="month-year"></div>
-        <a data-action="next-month" href="javascript:void(0)" title="Next Month"><i></i></a>
-      </div>
-      <div class="months" data-flow="left">
-        <div class="month month-a">
-          <div class="render render-a"></div>
-        </div>
-        <div class="month month-b">
-          <div class="render render-b"></div>
-        </div>
-      </div>
-    </div>
-    <img src="./img/haha_xd.png" class="evenement">
-    <script src="./js/index.js">
-    </script>
-
-    <!-- /// Calendar-end /// -->
-
-
-
-
-
-
-
-
-
-  </section>
-
-  <section class="contactpage">
-
-    <div id="contact" class="contact1">
-
-      <p>Get In <span>Touch</span>!</p>
-
-      <h1>CONTACT US!</h1>
-
-
-
-    </div>
-
-
-
-    <div class="contactbox"></div>
-    <!-- 
-    /// gegevens-start /// -->
-
-
-
-
-
-
-
-    <div class="icones-contact">
-      <img src="./img/email_icon.png" class="icone-email">
-      <img src="./img/address_icon.png" class="icone-adres">
-      <img src="./img/phone_icon_136322.png" class="icone-gsm">
-
-
-    </div>
-    <div class="gegevens-contact">
-      <p class="E-mail">E-mail: <br> lorem@hotmail.com</p>
-      <p class="adres">adres: <br> loremstraat 24 <br>
-        1030 Saint-jose </p>
-      <p class="gsm">gsm: <br> 0412345688</p>
-    </div>
-
-
-    <!-- /// gegevens-end /// -->
-
-
-
-
-
-    <!-- /// maps-start/// -->
-
-
-    <div class="maps">
-      <p><iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1755.6042605058992!2d4.371034073882205!3d50.85130514306528!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c36349bd6723%3A0x2d2d504d7f1aa1c!2sRue%20de%20la%20Commune%2025%2C%201210%20Saint-Josse-ten-Noode!5e0!3m2!1sfr!2sbe!4v1642627043820!5m2!1sfr!2sbe"
-          width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe></p>
-    </div>
-    <!-- /// maps-end /// -->
-
-
-
-
-
-    <!-- /// chatbox-start /// -->
-    <div class="chatbox">
-
-      <form class="contact-form" action="index.html" method="post"></form>
-      <input type="text" class="contact-form-text-email" placeholder="your email..">
-      <input type="email" class="contact-form-text-name" placeholder="your name..">
-      <textarea class="contact-form-text-message" placeholder="your message.."></textarea>
-      <input type="submit" class="contact-form-send" value="send">
-
-    </div>
-
-
-    <!-- /// chatbox-end /// -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- ///calendar /// -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  </section>
-
-  <footer>
-
-
-
-
-  </footer>
-
-
-
+    </section>
+
+  </main>
+
+<footer>
+<div></div>
+    <img src="/img/logo-st-joost.png">
+    <img src="/img/logo-ten-noey.png">
+    <img src="/img/logo-n.png">
+    <img src="/img/logo-bib-joske.png">
+    <img src="/img/logo-bredeschool.png">
+
+</footer>
 
 </body>
+
+</html>
+
+
+
+<script>
+  function toon() {
+    var burger = document.getElementById("entiteit");
+    burger.classList.toggle("active");
+  }
+</script>
