home-contact klaar

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
           0473 27 19 47</p>
 
         <h1>Openingsure</h1>
-        <p>Ma-woe: 8h30-20h00
-          Do-vr: 8h30-23h00
+        <p>Ma-woe: 8h30-20h00<br>
+          Do-vr: 8h30-23h00<br>
           Za-zo: 10h00-17h00</p>
       </div>
 
